<resources>
    <string name="app_name">Every Barataa</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_hiliwinaw">Hiliwinaw</string>
    <string name="title_activity_second">Second</string>
    <string name="title_activity_get">GetActivity</string>
    <string name="yegziabher_hiliwuna">Jiraachuu Waaqayyoo</string>
    <string name="egziabher_ale_title">Waaqayyo ni jiraa?</string>
    <string name="egziabher_manew">Waaqayyo eenyudhaa?</string>
    <string name="egziabher_menor_ergit_new">Jiraachuun Waaqayyoo mirkaneeffamaadhaa?</string>
    <string name="bemejemeria_hulu_neger_bado_neberin">Jalqabarratti wanti hundi duwwaa turee?</string>
    <string name="egziabher_man_feterew">Eenyutu Waaqayyoon Uume?</string>
    <string name="egziabher_yet_new">Waaqayyo eessa jiraa?</string>
    <string name="yehiwot_tiyakewoch">Gaaffiiwwan jireenyaa</string>
    <string name="hiwot_lemin_kebad_hone">Jireenyi maaliif jabaataa?</string>
    <string name="yehiwote_alama_mndnew">Kaayyoon jiraachuu koo maalidhaa?</string>
    <string name="bechink_sinikebeb">Gaafa dhiphinaan marfamnu Waaqayyo eessa jiraa?</string>
    <string name="wesibina_yefikir_ginignunet">Quunnamtii saalaa fi jaalala</string>
    <string name="wesibina_yefikir_guadegna">Quunnamtii saalaa fi jaalallee fedhuu</string>
    <string name="lifers_yetekarebe_tidar">Gaa\’illi diigamuuf jedhu abdii qaba ta\’aa?</string>
    <string name="yewesib_film_mirkogna">Fiilmii quunnamtii saalaatiin booji\’amuu</string>
    <string name="ewunetegna_yesetoch_mebt_akibari">Mirga dubartootaa kan dhuguma kabaju</string>
    <string name="egziabherin_mawek">Waaqayyoon beekuu</string>
    <string name="egziabherin_begil_mawek">Waaqayyoon dhuunfaatti beekuu</string>
    <string name="egziabher_tselotin_yimelisal">Waaqayyo Kadhannaa Keenyaaf Ni Deebisaa?</string>
    <string name="eyesus_manew">Yesus Eenyu Turee?</string>
    <string name="eyesus_lemin_mote">Yesus maaliif du\’e?</string>
    <string name="egziabherin_begil_mawek_content">\n\nWaaqayyoon dhuunfaatti beekuuf maaltu barbaachisaa? Balaqqeessa bakakkaa? Sirna amantii cimaa? Nama namoota warra kaan caalu taatee argamu? Isaan kuni hundi haal duree ta’uu hin danda’an. Waaqayyoon beekuudhaaf wantoota nama barbaachisan Macaafa qulqulluu irratti ifaaf ifatti nuuf kaa’eera.
\n\nWanti hundi sirnaa fi seera qaba. Wanti namni hojjete hundi akkuma seera nam-tolchee qabu hunda, wanti Waaqayyo uumes akkuma kana sirna uumamaa qaba.
\n\nAkkuma kana walitti dhufeenya namni Waaqayyo waliin qabu kan murteessan seerota afuuraa afuritu jira. Qajeelfama jettees fudhachuu dandeessa.

\n\n<b>1 Seera jalqabaa </b>
\n\n<b>Waaqayyo si JALATA jireenya keetfifis KAROORA dinqisiisaa qaba. </b>
\n\n<b>JALAALA WAAQAYYO</b>
\n\n“Waaqayyo akkasitti tokkicha ilma isaa hanga kennuufitti biyya lafaa jaalate, kun immoo isatti kan amanu hundinuu jireenya barabaraa haa qabaatuuf malee, haa baduuf miti.” (Yoh. 3:16)
\n\n<b>KAROORA WAAQAYYOO</b>
\n\nYesus akkas jedhe,“Ani… holotin jireenya haqabaataniif, irra hafaas haa qabaataniif dhufeera.” (Yoh. 10:10)
\n\nHat’au malee namootni hundumtuu jireenya gammachu hin jiraatan Sababni isaa…

\n\n<b>2
Seera lammaffaa</b>
\n\n<b>Namni cubbamaadha kanaafu waaqayyo irraas kan adda ba’ee dha, kanaaf jaalala fi karoora waaqayyo beekuu fi shaakalu hin danda’u.</b>
\n\n<b>NAMNI CUBBAMAADHAA</b>
\n\n“Hundinuu yakkaniiru ulfinni Waaqayyo isaanitti hir’ateera.” (Rom. 3:23)
\n\nNamni kan uumame Waaqayyo wajjin michuu akka ta’uufidha. Garuu namni karaa ofii isaatii waan filateef michummaan inni Waaqayyo wajjin qabuu addaan cite. Daandi ofii keenya irra yeroo deemnu Waaqayyof kan hin abbomamne fi kan dhima hinqabne taana. Yaada akkanaa macaafni qulquluun cubbuu jedhee waama.
\n\n“Nuyi hundumti keenya akka hoolota karaa irraa badnee turre, adduma addanis kara-karaa in gorre.” (Isaa. 53:6)
\n\n<b>NAMNI WAAQA IRRAA ADDAAN BA’EERA</b>
\n\n“…beenyaan (mindaan) nama cubbu hojjettu du’a,” [Hafuraan Waaqayyo irraa addaan ba’uu]. (Rom 6:23)</string>
    <string name="egziabherin_begil_mawek_content1">\n\nFakkin kun kan agarsisu Waaqayyo qulqulluu, namni immoo cubbamaa ta’uu isaati. Lamaanuu gargar fagoo jiru. Waaqayyo bira ga’uuf humna ofii isaatiin jireenya irraa hafaa jiraachuuf yaalii namni godhu agarsiisa, kun nama amantii fakkaachuudhaan, warra kaan gargaaruudhaan, kkf, yaaliin kun hundaa garuu kufaa dha.
\n\nSerrii sadaffaan rakko kanaaf furmaata ni kenna …

\n\n<b>3
Seera sadaffaa </b>
\n\n<b>Kaaran inni tokkichi kan nama gara Waaqayyotti geessu Yesus Kristosi dha. Inii qooda Keenya du’e. Namni karaa Yasus Waaqayyon, karoora isaa fi jaalala isaa beekee mi’eeffachuu danda’a.</b>
\n\n<b>INNI NUUF JEDHEE DU’E.</b>
    \n\n“Waaqayyo garuu, utuma nuyi cubbamoota taane jirruu, Kristos nuuf du’uu isaatiin hammam akka nu jaallate ni argisiisa.” (Rom. 5:8)
    \n\n<b>DU’AA KE’ERA</b>
    \n\n“…Kristos cubbu keenyaaf du’eera, inni awwaalameera, Caaffanni qulqullaa’oon akka jedhanitti guyyaa sadaffaattis du’aa kaafameera…” (1Qoro. 15:3-5)
    \n\n<b>INNI KARAA ISA TOKKICHA</b>
    \n\nYesuus deebisee, “karichi, dhugaan, jireenyis, ana, anaan yoo ta’e malee eenyu iyyuu gara Abbaa hin dhufu” (Yoh. 14:6).</string>
    <string name="egziabherin_begil_mawek_content2">\n\nFakkin kun kan agarsisuu kan ofii isaatti nu deebisu danda’u Waaqayyo qofaa ta’usatii. Kaanfu Waaqayyo ilma isaa Yesusiin erguudhaan gargar fageenyi ofii isaa fi nu gidduu jiru irratti riiqicha godheera. Yasus Krisitos namaa fi Waaqa gidduu dhaabachuuf du’ee ka’e.
\n\nHata’u malee seerota kana sadan qofa beekuun ga’aa miti…

\n\n<b>4
Seera arfaffaa </b>
\n\n<b>Tokkoo tokkoon keenya Yesus Kristosiin akka fayyisaa lubbuu keenyaatti fudhachuu malla, yoo kana ta’e jaalala fi karoora inni jireenya keenyaaf qabu beekuu DANDEENYA.</b>
\n\n<b>KRISTOSIIN FUDHACHUU MALLA</b>
\n\n“Hamma isa simataniif immoo ijollee Waaqayyoo akka ta’aniif haboo isaaniif kenne, isaanis warra maqaa isaatti waamamanidha.” (Yoh 1:12)
\n\n<b>AMANTIIDHAAN KRISTOOSIIN FUDHACHUU MALLA</b>
\n\n“Isin ayyaana Waaqayyotin karaa amantii fayyifamtan, inni immoo kennaa Waaqayyoti malee, gocha ofii keessanii miti, hojiidhaanis miti, namni tokko illee akka ittiin of hin jajnetti” (Efe. 2:8-9).
\n\n<b>JIRREENYA KEENYA KEESSATTI KRISTOOSIIN AFEERUUDHAAN ISA SIMACHUU DANDEENYA</b>
\n\n“Kunoo! Ani balbala dura dhaabadhee balbala nan rukuta, namni sagalee koo dhaga’ee yoo balbala naaf bane, ani ol nan lixa, isaa wajjinis maaddiitti nan dhiyaadha, innis anaa wajjin ni nyaata” (Mul. 3:20).
\n\n<b>KRISTOSITTI AMANACHUUN QABXII ARMAAN GADII OF KEESSA QABA</b>\n\n
Cubbamoota ta’u keenya beekne cubbu kennya irra deebiu’udhaan Waaqayyo wajjin walii-galuu
Yesus Kristos cubbuu keenyaaf jedhee akka du’e amanuu
Kristos jireenya keenya guyyaa-guyyaa keessatti akka jiraatu hayyamuu fi isatti amanachuu.\n\n
<b>FAKKIIWWAN ARMAAN GADII JIREENYA NAMA LAMAA BAKKA BU’UU</b>
</string>
    <string name="egziabherin_begil_mawek_content3">\n\n<b>Jireenyi kee fakki isaa kam fakkaata?
\n\nJireenyi kee fakki issa kam akka fakaatuu feetaa?

\n\nKRISTOSIN AMMUMA AMMANTIDHAAN GARA JIREENYA KEETTI WAAMMACHUU DANDESSA </b>
\n\nKristos amma gara jireenya kee akka dhufu gaafadhu. Waaqayyo abdiisaa raawwachu akka danada’u amani. Inni jecha afaan kee irra caalaa yaada garaa kee beeka. Kadhachun yoo feedha kee ta’e akkas jette kadhachuu ni dandeessa.
\n\n“Yaa Yesus, ani dhunfaakooti si beekuun fedha. Ati waa’ee cubbuukoof fannorratti du’uu keetiif sin glatefedha. Amma jireenya koo banee akka Waaqaa fi goftaa kootiti sin simadha. Cubbu koo hundaaf waan dhifama naaf gotee fi jireenya bara-baraas naaf laatteef sin galateffadha. Jireenya koo dhunfadhu. Nama ati fedha kee ittiin raawwattu na godhi. Amen”.
\n\nKadhanaan kun fedha garaa kee nimulisa?
\n\nNi mull’isa yoo ta’ee, kadhanna arman gadi amuma kadhadhu. Kirstos akkuma kakuu isaatti gara jireenya kee ammuma dhufa.

\n\n<b>KIRISTOS GARA JIREENYA KEE DHUFUU ISAA ATTAMIN BEEKU DANDESAA?</b>
\n\nJireenya kee keessattii Kristoosiin simatteettaa? Amma Kristos jireenya kee keessa jiraa? akka Waaqayyo kadhata kee siif deebisuu maaliin beekta? Akka kakuu abdiisaa isaa isa Mul. 3:20tti Kiristos jireenya kee keessa akka jiru beeku dandesa.
\n\n<b>KITAABIN QULQULLUUN WARRA KIRISTOSIIN FUDHATAN HUNDAA JIREENYA BARA-BARAA AKKA ARGATAN ABDACHIISA.</b>
\n\n“Waaqayyo jireenya bara-baraa nuuf kenne; egaa dhugaan isaa isa kana; jireenyi bara-baraa kunis ilma isaa keessatti argama. Namni ilma Waaqayyo hin qabne jireenyicha hin qabu. Isin warri ilma Waaqayyotti amantan, jireenya bara-baraa qabaachuu keessan akka beektaniifan kana hundumaa isiniif barreesse.” (1Yoh. 5:11-13)
\n\n“Kiristos yeroo hundaa jireenya kee keessa waan jiraatuuf matumaa waan si hin dhiisneef galateefadhu.” (Ibr. 13:5)
\n\n<b>Kana booda hoo?</b>

\n\n<b>MIIRA KEE IRRATTI HIN HIRKATIIN</b>
\n\nKitaabni qulqulluun akkuma jedhu, Kristaanni Waaqayyoon amanuudhaan jiraata male, miira isaati hin hirkatu. Fakkiin baaburaa kun, kana mullisa.\n\n
Dhugaa: Waaqayyof sagale isaa agarsisa
Amantii: hirkata Waaqayyof sagale isaa irrati qabnu agarsisa
Miira: bu’a amanttiif abboomamaa ta’u akka mallu agarsisa.</string>
    <string name="egziabherin_begil_mawek_content4">\n\nBaaburi kun kan adeemu danda’u motooraan malee harkifamuu hin danda’u. Akkasuma kristanni tokko Waaqayyof sagalee isaatii male miira isaa irrati hirkachuu hin qabu. Amantiin kee mirra kee irratti akka hin hundoofnee.
\n\n“Nuyi amantiidhaan jiraanna malee waan hundummaa ijaan arguudhaan jiraanna mitti.” (2 Qro. 2:7)

\n\n<b>Jireenya kee keesatii maaltuu raawwatamee?</b>
\n\nYaroo Kristosiin fudhattee isa wajjin walitti dhufeenya jelqabdeetta jechuudha. Battala ati Kristosiin murtee keetin fudhattee eegalee waan baayy’een jireenya kee keessatti raawwateera:\n\n
1. Kristos jireenya kee keessa seeneera. (Mul. 3:20 fi Qol. 1:27)
2. Cubbuun kee siif dhiifameera. (Qol. 1:14)
3. Ati mucaa Waaqayyoo taateetta. (Yoh. 1:12).
4. Jireenya bara-baraa argatteeta. (Yoh. 5:24)
5. Karooraa fi akeeka Waaqayyo jireenya keef qabus shaakaluu eegalta. (Yoh. 10:10 fi Qor. 2. 5:17).
\n\nKristos wajjin dhuunfaatti michuu ta’uurra waanti caalu waan gaariin na mudata jettee ni yaaddaa? Waan Waaqayyo siif godhe hundaaf amma kadhataan galateeffachuu ni feetaa?

\n\n<b>ATTAMITTI JIREENYA HAFUURATTI AKKA GUDDATTU</b>
\n\nGuddinni jireenya afuraa Kirstosiin amanachuudhaan dhufa. “Namni amantii dhaan fuula waaqayyoo duraatti qajeela ta’ee jireenya dhugaa in jiraata” (Gal. 3:11). Jireenyi kee Kristos walin yeroodhaa gara yarootti akka gudatuf Waaqayyoof abbomamu qabda. Yaadi armaan gadii guddinaaf si gargaaru.\n\n
¨ Yeroo hundaa Waaqayyoon kadhadhu. (Yoh. 15:7)
¨ Guyyuu hundaa sagalee Waaqayyo dubbisi [Wangeela Yohaannis irraa eegali]. (Hojii Erge. 17:11).
¨ Waaqayyof abbomamuu bari. (Yoh. 14:21)
¨ Jireenya kee fi jecha keetiin Kiristoosiin dhugaa ba’i. (Luq. 8:39)
¨ Jireenya kee guutuu Waaqayyon amanadhu. (1 Phe. 5:7)
“Afurrii qulqqulluun yommuu isin irra bu’u human godhattu…andaara lafaattis dhugaa baatuu koo in taatu” (HoE. 1:8).

\n\n<b>FAAYIDAA WALDAA KRISTAANAA</b>
\n\nKristaanota gara biraa waliin tokkuma ummachun barbachiisaa dha. (Ibr. 10:25, Ho.erg 2:42-47 )
\n\nHanga yoonaa gara waldaa kristaanaa yoo deemtee hin beektu ta’e, Kristosiif sagaleen isaa gara lallabamu deemtee namota Kristosin akka fayyisaa fi goftaa isaanitti fudhatanii waaqeeffatan waliin tokkummaa uumuu ni dandeessaa.
\n\nMukti qoraanii yoo walitti kuufame abbidda ho’aa nuu keena. Garuu muka tokko yoo abbidda keesaa baafnee qofaa isaa lafa keenye abbidi isaa ni bada. Akkasuma jireenyi kristaanuummaa qofaa nama rakkisa.

\n\nBARREEFAMNII FI WANTI GUDDINA KRSTAANAATIIF GARGAARU NI JIRA.
\n\nBarreeffama guddina kirstaanaatiif gargaaru yoo barbaadde teessoo keenya armaan gadiin nu argattu
\n\n<b>GREAT COMMISSION MINISTRY ETHIOPIA </b>
\nt P.O. Box 41303 ADDIS ABABA
\n359 AWASSA
\n1158 BAHIR DAR
\n1182 JIMMA
\n808 HARAR
\n---- NEKEMT
</string>
</resources>